Fixed styling for presentations / video alignment

--- a/app/assets/stylesheets/_home.sass
+++ b/app/assets/stylesheets/_home.sass
@@ -86,8 +86,8 @@
     .presentation
       height: 2em
 
-    .presentation__slides
-      margin-left: 10px
+    .presentation__video
+      margin-right: 10px
 
     .presentation__title
       position: absolute
